# customTemplate

./: README.md  pyproject.toml
custom_template_project/: manage.py
custom_template_project/custom_template_app/: apps.py  models.py  serializers.py  urls.py  views.py
custom_template_project/custom_template_project/: asgi.py  settings.py  urls.py  wsgi.py
